<?xml version="2.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="344dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:text="Cálculo Peso Vidro"
        android:textColor="#004190"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1.1"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/txtlargnum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Cálculo Peso Vidro" />

    <TextView
        android:id="@+id/textlargura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/largura"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toStartOf="@+id/txtlargnum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="Largura:" />

    <TextView
        android:id="@+id/txtalt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/altura"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toStartOf="@+id/txtaltnum"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlargnum"
        tools:text="Altura:" />

    <EditText
        android:id="@+id/txtlargnum"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mm1"
        android:inputType="none|numberSigned|numberDecimal"
        android:singleLine="true"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="23sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/txtexpnum"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mm2"
        android:inputType="none|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="15sp"
        android:visibility="visible"

        app:layout_constraintStart_toEndOf="@+id/vidro"
        app:layout_constraintTop_toBottomOf="@+id/txtaltnum" />

    <TextView
        android:id="@+id/txtexpess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/e"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtalt"
        tools:text="E" />

    <EditText
        android:id="@+id/txtexpnum2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mm2"
        android:inputType="none|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="15sp"
        android:visibility="visible"

        app:layout_constraintStart_toEndOf="@+id/vidro_2"
        app:layout_constraintTop_toBottomOf="@+id/txtexpnum" />

    <TextView
        android:id="@+id/txtexpess5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/e"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtexpess6"
        tools:text="E" />

    <EditText
        android:id="@+id/txtexpnum3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mm2"
        android:inputType="none|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/vidro_3"
        app:layout_constraintTop_toBottomOf="@+id/txtexpnum2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="288dp"
        android:contentDescription="TODO"
        android:src="@drawable/vidro_1"
        app:layout_constraintStart_toEndOf="@+id/txtexpnum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vidro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="vidro 1"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/txtexpess"
        app:layout_constraintTop_toBottomOf="@+id/txtalt"
        tools:text="vidro 1" />

    <TextView
        android:id="@+id/txtexpess6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/e"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtexpess"
        tools:text="E" />

    <TextView
        android:id="@+id/vidro_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="vidro 3"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/txtexpess5"
        app:layout_constraintTop_toBottomOf="@+id/vidro_2"
        tools:text="vidro 3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/vidro_3"
        app:layout_constraintStart_toEndOf="@+id/txtexpnum3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"

        android:layout_marginTop="12dp"
        android:src="@drawable/vidro_2"
        app:layout_constraintStart_toEndOf="@+id/txtexpnum2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/vidro_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/vidro_2"
        android:textColor="#0E6BFF"
        android:textColorLink="#0E6BFF"
        android:textScaleX="1"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/txtexpess6"
        app:layout_constraintTop_toBottomOf="@+id/vidro"
        tools:text="vidro 2" />

    <EditText
        android:id="@+id/txtaltnum"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mm3"
        android:inputType="none|numberSigned|numberDecimal"
        android:singleLine="true"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="23sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlargnum" />

    <TextView
        android:id="@+id/ResultadoPeso"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="            Kg"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultadoPerimetro"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtexpnum3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="            Kg" />

    <TextView
        android:id="@+id/resultadoPerimetro"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="              m"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ResultadoPeso"
        app:layout_constraintTop_toBottomOf="@+id/txtexpnum3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="              m" />

    <Button
        android:id="@+id/btnLimpa"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/limpar"
        android:textColorHighlight="#008bd0"
        android:textColorLink="#008bd0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultadoPerimetro"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultadoPeso"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCalcula"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/calcular"
        android:textColorHighlight="#008bd0"
        android:textColorLink="#008bd0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/ResultadoPeso"
        app:layout_constraintTop_toBottomOf="@+id/resultadoPerimetro"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>